package pt.ipp.isep.dei.lapr2.pot.model;

import sun.reflect.generics.reflectiveObjects.NotImplementedException;

public class Payment {

    public boolean computeAmount(double taskCostPerHour, int taskAssignedDuration, String freelancerExpertise){
        throw new NotImplementedException();
    }
}
